bugfix: fixed issue with "Allow Once" location permission on iOS

--- a/CovidApp/CovidApp.iOS/CovidApp.iOS.csproj
+++ b/CovidApp/CovidApp.iOS/CovidApp.iOS.csproj
@@ -27,6 +27,8 @@
     <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
+    <CodesignKey>Apple Development: Evgen Goncharov (5U6ZWXK28F)</CodesignKey>
+    <CodesignProvision>VS: WildCard Development</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
