Added settings page and switch functionality for provincial/national stats. Added switch case for provincial codes to enable provincial API calls. TODO: back button awaits lengthy GeoJSON function. Need to optimize

--- a/CovidApp/CovidApp/CovidApp.csproj
+++ b/CovidApp/CovidApp/CovidApp.csproj
@@ -10,20 +10,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Esri.ArcGISRuntime.Xamarin.Forms" Version="100.9.0" />
+    <PackageReference Include="Esri.ArcGISRuntime.Xamarin.Forms" Version="100.11.2" />
     <PackageReference Include="Geocoding.MapQuest" Version="4.0.1" />
     <PackageReference Include="GeoJSON.Net" Version="1.2.19" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="2.0.4" />
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="19.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.Cards" Version="19.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.SfBadgeView" Version="19.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.SfComboBox" Version="19.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="19.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.SfRating" Version="19.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.SfRotator" Version="19.2.0.47" />
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />  
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="19.2.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.Cards" Version="19.2.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.2.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfBadgeView" Version="19.2.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfComboBox" Version="19.2.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="19.2.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRating" Version="19.2.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRotator" Version="19.2.0.55" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />  
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.3.0.759" />
   </ItemGroup>
@@ -36,6 +36,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Views\LoadingPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SettingsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\TrackerPage.xaml">
