--- a/CovidApp/CovidApp/CovidApp.csproj
+++ b/CovidApp/CovidApp/CovidApp.csproj
@@ -7,6 +7,11 @@
 
   <ItemGroup>
     <None Remove="file.geojson" />
+    <None Remove="gear_icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="gear_icon.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,15 +20,7 @@
     <PackageReference Include="GeoJSON.Net" Version="1.2.19" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="2.0.4" />
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="19.2.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.Cards" Version="19.2.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.2.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.SfBadgeView" Version="19.2.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.SfComboBox" Version="19.2.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="19.2.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.SfRating" Version="19.2.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.SfRotator" Version="19.2.0.55" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />  
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2125" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />  
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.3.0.759" />
   </ItemGroup>
@@ -35,6 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\IOSModalSettings.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LoadingPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
